--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,8 @@
     function saveMessage() {
       const message = document.getElementById('adminMessage').value;
       const expiresAt = Date.now() + 15 * 60 * 1000; // 15 minutes from now
-      localStorage.setItem('site_message', JSON.stringify({ message, expiresAt }));
+      localStorage.setItem('site_message', '{"message":"new","expiresAt":1744783934647}');
+
       alert('Message saved for 15 minutes!');
     }
   </script>
