--- a/admin.html
+++ b/admin.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Admin Panel</title>
   <style>
     body { font-family: Arial; padding: 40px; text-align: center; }
-    input, button { padding: 10px; font-size: 16px; margin-top: 10px; }
+    input, button { padding: 10px 20px; font-size: 16px; margin: 10px; }
+    #status { margin-top: 20px; font-size: 18px; color: #555; }
   </style>
 </head>
 <body>
-  <h2>Admin Panel - Set Timed Message</h2>
+  <h2>Admin Panel - Manage Timed Message</h2>
   <input type="text" id="adminMessage" placeholder="Enter your message">
   <br>
   <button onclick="saveMessage()">Save Message</button>
+  <button onclick="clearMessage()">Clear Message</button>
+  <div id="status"></div>
 
   <script>
     function saveMessage() {
-      const msg = {
-  message: "This is the updated message!",
-  expiresAt: Date.now() + 15 * 60 * 1000 // 15 minutes from now
-};
-localStorage.setItem('site_message', JSON.stringify(msg));
+      const newMessage = document.getElementById('adminMessage').value.trim();
+      if (!newMessage) {
+        alert("Please enter a message.");
+        return;
+      }
 
+      const existing = JSON.parse(localStorage.getItem('site_message'));
+      const currentMessage = existing?.message || "";
 
-      alert('Message saved for 15 minutes!');
+      if (newMessage !== currentMessage) {
+        const expiresAt = Date.now() + 15 * 60 * 1000; // 15 minutes
+        const updated = { message: newMessage, expiresAt };
+        localStorage.setItem('site_message', JSON.stringify(updated));
+        alert("Message updated.");
+        updateStatus();
+      } else {
+        alert("Same message already exists. No changes made.");
+      }
     }
+
+    function clearMessage() {
+      localStorage.removeItem('site_message');
+      alert("Message cleared.");
+      updateStatus();
+    }
+
+    function updateStatus() {
+      const data = JSON.parse(localStorage.getItem('site_message'));
+      const statusEl = document.getElementById('status');
+
+      if (data && Date.now() < data.expiresAt) {
+        const remaining = Math.floor((data.expiresAt - Date.now()) / 1000);
+        const mins = Math.floor(remaining / 60);
+        const secs = remaining % 60;
+        statusEl.textContent = `Current Message: "${data.message}" (expires in ${mins}m ${secs}s)`;
+      } else if (data) {
+        statusEl.textContent = `Stored message expired.`;
+      } else {
+        statusEl.textContent = `No message set.`;
+      }
+    }
+
+    updateStatus();
+    setInterval(updateStatus, 1000); // Refresh countdown every second
   </script>
 </body>
 </html>
