--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Public Page</title>
   <style>
-    body { font-family: Arial; padding: 40px; text-align: center; background: #f7f7f7; }
+    body { font-family: Arial; padding: 40px; text-align: center; background: #f7f7f7; cursor: pointer; }
     #display { font-size: 24px; color: #333; margin-top: 30px; }
     #countdown { font-size: 18px; margin-top: 10px; color: #666; }
   </style>
@@ -13,6 +13,7 @@
   <h2>Welcome Message</h2>
   <div id="display">Checking message...</div>
   <div id="countdown"></div>
+  <p><small>Click anywhere on the page to hear the message.</small></p>
 
   <script>
     const displayEl = document.getElementById('display');
@@ -24,10 +25,17 @@
       const message = data.message;
       displayEl.textContent = message;
 
-      // Speak the message using speechSynthesis
-      const utterance = new SpeechSynthesisUtterance(message);
-      utterance.lang = "en-US"; // Set the language (you can change to "en-GB" or another language)
-      speechSynthesis.speak(utterance);
+      // Function to speak the message
+      function speakMessage(msg) {
+        const utterance = new SpeechSynthesisUtterance(msg);
+        utterance.lang = "en-US"; // You can change the language
+        speechSynthesis.speak(utterance);
+      }
+
+      // Wait for user to click anywhere to trigger the speech
+      document.body.addEventListener('click', function() {
+        speakMessage(message); // Speak the message when clicked
+      });
 
       // Countdown timer
       function updateCountdown() {
