--- a/admin.html
+++ b/admin.html
@@ -1,68 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Admin Panel</title>
   <style>
-    body { font-family: Arial; padding: 40px; text-align: center; }
-    input, button { padding: 10px 20px; font-size: 16px; margin: 10px; }
-    #status { margin-top: 20px; font-size: 18px; color: #555; }
+    body { font-family: Arial; max-width: 500px; margin: 40px auto; padding: 20px; background: #f2f2f2; }
+    label { display: block; margin-top: 20px; font-weight: bold; }
+    input, textarea { width: 100%; padding: 10px; margin-top: 5px; }
+    button { margin-top: 20px; padding: 10px 20px; font-size: 16px; }
   </style>
 </head>
 <body>
-  <h2>Admin Panel - Manage Timed Message</h2>
-  <input type="text" id="adminMessage" placeholder="Enter your message">
-  <br>
-  <button onclick="saveMessage()">Save Message</button>
-  <button onclick="clearMessage()">Clear Message</button>
-  <div id="status"></div>
+  <h2>Admin: Set Public Message</h2>
+  <label>Message:</label>
+  <textarea id="message" rows="3"></textarea>
+
+  <label>Duration (minutes):</label>
+  <input type="number" id="duration" value="15" min="1">
+
+  <label>Schedule Delay (minutes from now):</label>
+  <input type="number" id="delay" value="0" min="0">
+
+  <button onclick="saveMessage()">Set Message</button>
+
+  <p id="status"></p>
 
   <script>
     function saveMessage() {
-      const newMessage = document.getElementById('adminMessage').value.trim();
-      if (!newMessage) {
-        alert("Please enter a message.");
+      const message = document.getElementById('message').value.trim();
+      const duration = parseInt(document.getElementById('duration').value);
+      const delay = parseInt(document.getElementById('delay').value);
+      if (!message || duration <= 0) {
+        alert("Please enter a valid message and duration.");
         return;
       }
 
-      const existing = JSON.parse(localStorage.getItem('site_message'));
-      const currentMessage = existing?.message || "";
+      const now = Date.now();
+      const startAt = now + delay * 60000;
+      const expiresAt = startAt + duration * 60000;
 
-      if (newMessage !== currentMessage) {
-        const expiresAt = Date.now() + 15 * 60 * 1000; // 15 minutes
-        const updated = { message: newMessage, expiresAt };
-        localStorage.setItem('site_message', JSON.stringify(updated));
-        alert("Message updated.");
-        updateStatus();
-      } else {
-        alert("Same message already exists. No changes made.");
-      }
+      const payload = {
+        message,
+        startAt,
+        expiresAt
+      };
+
+      localStorage.setItem('site_message', JSON.stringify(payload));
+      document.getElementById('status').textContent = "Message scheduled successfully.";
     }
-
-    function clearMessage() {
-      localStorage.removeItem('site_message');
-      alert("Message cleared.");
-      updateStatus();
-    }
-
-    function updateStatus() {
-      const data = JSON.parse(localStorage.getItem('site_message'));
-      const statusEl = document.getElementById('status');
-
-      if (data && Date.now() < data.expiresAt) {
-        const remaining = Math.floor((data.expiresAt - Date.now()) / 1000);
-        const mins = Math.floor(remaining / 60);
-        const secs = remaining % 60;
-        statusEl.textContent = `Current Message: "${data.message}" (expires in ${mins}m ${secs}s)`;
-      } else if (data) {
-        statusEl.textContent = `Stored message expired.`;
-      } else {
-        statusEl.textContent = `No message set.`;
-      }
-    }
-
-    updateStatus();
-    setInterval(updateStatus, 1000); // Refresh countdown every second
   </script>
 </body>
 </html>
