--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     function speakMessage(msg) {
       const utterance = new SpeechSynthesisUtterance(msg);
-      utterance.lang = "en-US";
+      utterance.lang = "hi-IN";
       speechSynthesis.speak(utterance);
     }
 
