--- a/admin.html
+++ b/admin.html
@@ -25,8 +25,14 @@
   <input type="number" id="repeatCount" min="1" max="10" value="5">
 
   <button onclick="saveMessage()">Save Message</button>
+  <button onclick="clearMessage()">Clear Message</button>
 
   <script>
+    function clearMessage() {
+      localStorage.removeItem('site_message');
+      alert("Message cleared.");
+      updateStatus();
+    }
     function saveMessage() {
       const message = document.getElementById('message').value.trim();
       const start = new Date(document.getElementById('startTime').value).getTime();
