--- a/admin.html
+++ b/admin.html
@@ -109,9 +109,9 @@
 
     <label for="endTime">End Time (Optional):</label>
     <input type="datetime-local" id="endTime">
-<!-- 
+
     <label for="repeatCount">Repeat Count (1–10):</label>
-    <input type="number" id="repeatCount" min="1" max="10" value="5"> -->
+    <!-- <input type="number" id="repeatCount" min="1" max="10" value="5"> -->
 
     <div class="btn-group">
       <button class="btn-save" onclick="saveMessage()">💾 Save</button>
