--- a/admin.html
+++ b/admin.html
@@ -110,7 +110,7 @@
     <label for="endTime">End Time (Optional):</label>
     <input type="datetime-local" id="endTime">
 
-    <label for="repeatCount">Repeat Count (1–10):</label>
+    <label for="repeatCount">Repeat Count (1–10):(under work) defaul it take 5 time</label>
     <input type="number" id="repeatCount" min="1" max="10" value="5">
 
     <div class="btn-group">
